# vacancies

./: .gitignore  README.md  csv_to_json.py  manage.py  pyproject.toml
ads/: admin.py  models.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_location_alter_ad_options_alter_category_options_and_more.py  0003_remove_ad_address.py
ads/views/: ads.py  categories.py  service.py
amazing_hunting/: asgi.py  settings.py  urls.py  wsgi.py
amazing_hunting_poetry/: pyproject.toml
companies/: views.py
companies/migrations/: 0001_initial.py  0002_alter_company_logo.py
data/: user.csv
vacancies/: admin.py  models.py  urls.py  views.py
vacancies/migrations/: 0001_initial.py  0002_vacancy_user.py  0003_skill_vacancy_skills.py  0004_alter_skill_options_alter_vacancy_options.py  0005_skill_is_active.py
